--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <h1>Basic Calculator</h1>
+    <div class="calculator">
+        <input id="number1" type="number">
+        <input id="number2" type="number">
+        <button id="addBtn">+</button>
+        <button id="subtractBtn">-</button>
+        <button id="multiplyBtn">*</button>
+        <button id="divideBtn">/</button>
+        
+    </div>
     
 </body>
 </html>
