--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button id="multiplyBtn">*</button>
         <button id="divideBtn">/</button>
     </div>
+    <div id="result"></div>
     
 </body>
 </html>
