--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator</title>
-    <style src="styles.css"></style>
+    <style src="style.css"></style>
 </head>
 <body>
     <h1>Basic Calculator</h1>
