--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 <body>
     <h1>Basic Calculator</h1>
     <div class="calculator">
-        <input id="number1" type="number" placeholder="Enter first number">
-        <input id="number2" type="number" placeholder="Enter second number">
-        <button id="addBtn">+</button>
-        <button id="subtractBtn">-</button>
-        <button id="multiplyBtn">*</button>
-        <button id="divideBtn">/</button>
+        <div id="numbersDiv">
+            <input id="number1" type="number" placeholder="Enter first number">
+            <input id="number2" type="number" placeholder="Enter second number">
+        </div>
+        <div id="buttonsDiv">
+            <button id="addBtn">+</button>
+            <button id="subtractBtn">-</button>
+            <button id="multiplyBtn">*</button>
+            <button id="divideBtn">/</button>
+        </div>
     </div>
     <div id="result"></div>
     
